feat: Implement live video streaming component with WebSocket support
- Added VideoStream component for real-time video streaming using WebSocket.
- Implemented auto-reconnect and heartbeat mechanisms for WebSocket connection.
- Included FPS and detection statistics display in the video stream.
- Created a dedicated page for the video stream with connection information and usage instructions.

feat: Introduce MQTT file transfer API for model files

- Added MQTT integration for sending and receiving files, including .pt model files.
- Implemented API endpoints for publishing messages, JSON data, and file uploads via MQTT.
- Provided examples for Python and JavaScript clients to send and receive files.
- Documented configuration and usage in README.md.

fix: Enhance MQTT service with error handling and connection checks

- Improved error handling in MQTT publish and subscribe methods.
- Added checks for MQTT client connection status before publishing messages.
- Implemented file metadata publishing for better tracking of uploaded files.

--- a/topgun-services/configs/dev.yaml
+++ b/topgun-services/configs/dev.yaml
@@ -51,3 +51,8 @@ jwt:
   private: "./internal/assets/dev/jwt/privkey.pem"
   # openssl ec -in privkey.pem -pubout -out pubkey.pem
   public: "./internal/assets/dev/jwt/pubkey.pem"
+
+mqtt:
+  broker: "tcp://localhost:1883"
+  client_id: "topgun-services"
+  topic: "topgun/ai"
