Implement MQTT Detection Integration with video frame capture and database logging
- Added MQTT detection integration documentation detailing system architecture, data flow, and configuration.
- Developed MQTT handler to process detection messages from Raspberry PI, capture video frames, and save detection data to the database.
- Implemented functionality to resize captured images and save them in a specified directory.
- Established MQTT subscription with automatic reconnect and error handling.
- Included WebSocket broadcasting for real-time updates to clients.

--- a/topgun-services/configs/dev.yaml
+++ b/topgun-services/configs/dev.yaml
@@ -55,4 +55,6 @@ jwt:
 mqtt:
   broker: "tcp://localhost:1883"
   client_id: "topgun-services"
-  topic: "topgun/ai"
+  topic: "topgun/ai"           # For receiving detection data from Raspberry PI
+  command_topic: "topgun/command"  # For sending commands to Raspberry PI
+  camera_id: "3a939700-7724-4dc8-a5d8-47130aa68213"
